--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3StalSat</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="icon.png">
 </head>
 <body>
     <div style="display: flex; justify-content: center;"><img src="logo.png" style="background-color: black; width: 100px; height: 100px; border-radius: 10px;"></div>
