--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3StalSat</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="icon.png">
 </head>
 <body>
     <div style="display: flex; justify-content: center;"><img src="logo.png" style="background-color: black; width: 100px; height: 100px; border-radius: 10px;"></div>
@@ -17,6 +16,7 @@
         <div class="sm">
             <div class="smEntry"><a href="https://www.tiktok.com/@3stalsat" class="smEntry"><img class="smLogo" src="https://static.vecteezy.com/system/resources/previews/023/986/561/non_2x/tiktok-logo-tiktok-logo-transparent-tiktok-icon-transparent-free-free-png.png"><p>Tiktok</p></a></div>
             <div class="smEntry"><a href="https://www.instagram.com/3stalsat/" class="smEntry"><img class="smLogo" style="width: 40px; height: 40px; margin: 7px;" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/2048px-Instagram_logo_2016.svg.png"><p>Instagram</p></a></div>
+            <div class="smEntry"><a href="https://www.youtube.com/channel/UCwla7fNxXdv1EY_Lu7N2G9w" class="smEntry"><img class="smLogo" style="width: 53px; height: 40px; margin: 7px;" src="https://upload.wikimedia.org/wikipedia/commons/e/ef/Youtube_logo.png"><p>Youtube</p></a></div>
         </div>
         <hr>
         <h2>Our Progress</h2>
@@ -27,9 +27,11 @@
         <hr>
         <h2>Contact</h2>
         <div class="sm">
-            <div class="smEntry"><a href="mailto:lo3.explorer@gmail.com" class="smEntry"><img class="smLogo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Gmail_icon_%282020%29.svg/2560px-Gmail_icon_%282020%29.svg.png" style="margin-right: 10px; width: 53.33px; height: 40px;"><p>Email us</p></a></div>
+            <div class="smEntry"><a href="mailto:lo3.explorer@gmail.com" class="smEntry"><img class="smLogo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Gmail_icon_%282020%29.svg/2560px-Gmail_icon_%282020%29.svg.png" style="margin-right: 10px; width: 43px; height: 40px;"><p>Email us</p></a></div>
             <div class="smEntry"><a href="https://www.instagram.com/3stalsat/" class="smEntry"><img class="smLogo" style="width: 40px; height: 40px; margin: 7px;" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/2048px-Instagram_logo_2016.svg.png"><p>DM us on Instagram</p></a></div>
         </div>
+        <hr>
+        <iframe src="https://collaborate.shapr3d.com/v/eftN2uErJzQ9D0iVmpPXy" title="3StalSat Crystalization Model" width="640" height="640" frameborder="0" allow="web-share; xr-spatial-tracking" loading="lazy" scrolling="no" referrerpolicy="origin-when-cross-origin" allowfullscreen></iframe>
     </div>
 </body>
 </html>
