--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
             <div class="smEntry"><a href="https://www.instagram.com/3stalsat/" class="smEntry"><img class="smLogo" style="width: 40px; height: 40px; margin: 7px;" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/2048px-Instagram_logo_2016.svg.png"><p>DM us on Instagram</p></a></div>
         </div>
         <hr>
-        <iframe src="https://collaborate.shapr3d.com/v/eftN2uErJzQ9D0iVmpPXy" title="3StalSat Crystalization Model" width="640" height="640" frameborder="0" allow="web-share; xr-spatial-tracking" loading="lazy" scrolling="no" referrerpolicy="origin-when-cross-origin" allowfullscreen></iframe>
+        <div class="model">
+            <iframe src="https://collaborate.shapr3d.com/v/eftN2uErJzQ9D0iVmpPXy" title="3StalSat Crystalization Model" width="640" height="640" frameborder="0" allow="web-share; xr-spatial-tracking" loading="lazy" scrolling="no" referrerpolicy="origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
     </div>
 </body>
 </html>
