--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         <hr>
         <div class="model">
-            <iframe src="https://collaborate.shapr3d.com/v/eftN2uErJzQ9D0iVmpPXy" title="3StalSat Crystalization Model" width="640" height="640" frameborder="0" allow="web-share; xr-spatial-tracking" loading="lazy" scrolling="no" referrerpolicy="origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe src="https://collaborate.shapr3d.com/v/eftN2uErJzQ9D0iVmpPXy" title="3StalSat Crystalization Model" width="100%" height="700" frameborder="0" allow="web-share; xr-spatial-tracking" loading="lazy" scrolling="no" referrerpolicy="origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </div>
 </body>
