--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3StalSat</title>
     <link rel="stylesheet" href="style.css">
+    <script>
+        function deleteButton() {
+            const elements = document.getElementsByClassName('Button-module_button__2ZuB7');
+            for (let i = elements.length - 1; i >= 0; i--) {
+                elements[i].parentNode.removeChild(elements[i]);
+            } //F**k you shapr3d!
+        }
+        document.getElementById('model').iframe.addEventListener('load', deleteButton);
+    </script>
 </head>
 <body>
     <div style="display: flex; justify-content: center;"><img src="logo.png" style="background-color: black; width: 100px; height: 100px; border-radius: 10px;"></div>
@@ -31,8 +40,9 @@
             <div class="smEntry"><a href="https://www.instagram.com/3stalsat/" class="smEntry"><img class="smLogo" style="width: 40px; height: 40px; margin: 7px;" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/2048px-Instagram_logo_2016.svg.png"><p>DM us on Instagram</p></a></div>
         </div>
         <hr>
+        <h2>3D Model</h2>
         <div class="model">
-            <iframe src="https://collaborate.shapr3d.com/v/eftN2uErJzQ9D0iVmpPXy" title="3StalSat Crystalization Model" width="100%" height="700" frameborder="0" allow="web-share; xr-spatial-tracking" loading="lazy" scrolling="no" referrerpolicy="origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe id="model" src="https://collaborate.shapr3d.com/v/eftN2uErJzQ9D0iVmpPXy" title="3StalSat Crystalization Model" width="100%" height="700" frameborder="0" allow="web-share; xr-spatial-tracking" loading="lazy" scrolling="no" referrerpolicy="origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </div>
 </body>
