--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 elements[i].parentNode.removeChild(elements[i]);
             } //F**k you shapr3d!
         }
-        document.getElementById('model').iframe.addEventListener('load', deleteButton);
+        document.getElementById('model').addEventListener('load', deleteButton);
     </script>
 </body>
 </html>
