--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             for (let i = elements.length - 1; i >= 0; i--) {
                 elements[i].parentNode.removeChild(elements[i]);
             } //F**k you shapr3d!
+            console.log("test");
         }
         document.getElementById('model').addEventListener('load', deleteButton);
     </script>
